# symmetry-benchmarks

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  Makefile  Project.toml  README.md  bellman_results.json  chart.py  generate_data.jl  mttkrp_dim3_results_reference.json  mttkrp_results.json  mttkrp_results_dim4.json  plot_results.py  pyproject.toml  run.jl  run_SySTeC.jl  run_benchmarks.sh  setup.jl  setup.sh  ssymv_results.json  syprd_results.json  ttm_results.json
SySTeC/: run.jl  symmetrize.jl
data/: amino.tns  symmetric_10x10x10.tns  symmetric_3dim_n500_sp0.0001.bsp.h5  symmetric_3dim_n500_sp0.001.bsp.h5  symmetric_3dim_n500_sp0.1.bsp.h5  symmetric_4dim_n100_sp0.0001.bsp.h5  symmetric_4dim_n100_sp0.0025.bsp.h5  symmetric_4dim_n100_sp0.005.bsp.h5  symmetric_4dim_n100_sp0.0075.bsp.h5  symmetric_4dim_n100_sp0.01.bsp.h5  symmetric_4dim_n100_sp0.025.bsp.h5  symmetric_4dim_n100_sp0.05.bsp.h5  symmetric_4dim_n100_sp0.075.bsp.h5  symmetric_4dim_n100_sp0.1.bsp.h5  symmetric_5dim_n40_sp0.0001.bsp.h5  symmetric_5dim_n40_sp0.1.bsp.h5  symmetric_n500_sp0.0001.bsp.h5  symmetric_n500_sp0.0025.bsp.h5  symmetric_n500_sp0.005.bsp.h5  symmetric_n500_sp0.0075.bsp.h5  symmetric_n500_sp0.01.bsp.h5  symmetric_n500_sp0.025.bsp.h5  symmetric_n500_sp0.05.bsp.h5  symmetric_n500_sp0.075.bsp.h5  symmetric_n500_sp0.1.bsp.h5  symmetric_n5_sp1.0.bsp.h5
kernels/: cgo_chart.py  chart.py  generate_data.jl  matrixmarket.jl  mttkrp_results.json  pyproject.toml  stats.jl  symmetrize_tensors.jl
kernels/bellman/: bellman_finch.jl  bellman_results.json  bellman_taco.cpp  bellman_taco.jl  (+1 more)
(+111 files in other folders)
