[tool.poetry]
name = "kernels"
version = "0.1.0"
description = ""
authors = ["Willow Ahrens <willow@csail.mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.0"
packaging = "^24.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"